--- a/packs/ontimize/charts/values.yaml
+++ b/packs/ontimize/charts/values.yaml
@@ -58,7 +58,7 @@ resources:
   requests:
     cpu: 400m
     memory: 512Mi
-probePath: /actuator/health
+probePath: /actuator/
 livenessProbe:
   initialDelaySeconds: 60
   periodSeconds: 10
