--- a/packs/ontimize/charts/Makefile
+++ b/packs/ontimize/charts/Makefile
@@ -25,7 +25,7 @@ clean:
 release: clean
 	helm dependency build
 	helm lint
-	helm init --client-only
+	helm init --client-only --stable-repo-url https://charts.helm.sh/stable
 	helm package .
 	curl --fail -u $(CHARTMUSEUM_CREDS_USR):$(CHARTMUSEUM_CREDS_PSW) --data-binary "@$(NAME)-$(shell sed -n 's/^version: //p' Chart.yaml).tgz" $(CHART_REPO)/api/charts
 	rm -rf ${NAME}*.tgz%
