--- a/packs/ontimize/preview/Makefile
+++ b/packs/ontimize/preview/Makefile
@@ -15,4 +15,5 @@ else
 	exit -1
 endif
 	echo "  version: $(PREVIEW_VERSION)" >> requirements.yaml
+	helm init --client-only --stable-repo-url https://charts.helm.sh/stable
 	jx step helm build
